dataset1235/2025-2/1153765216/users/2299863494/executions/3138746197_3530285078.log
== RUN (2025-08-21 19:48:59)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:46:32)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(lower"())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(lower"())
               ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(lower"())
               ^
SyntaxError: unterminated string literal (detected at line 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 17:46:12)
-- CODE: 
texto = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(texto.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:47:19)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
.lower()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    .lower()
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    .lower()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 17:40:45)
-- CODE: 
texto = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(texto.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:45:00)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(f"{string}.lower")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra..lower
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra..lower
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:46:35)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(lower"())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(lower"())
               ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(lower"())
               ^
SyntaxError: unterminated string literal (detected at line 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:46:11)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(f"{string}.lower"())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
XXXX:2: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print(f"{string}.lower"())
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(f"{string}.lower"())
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
XXXX:2: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print(f"{string}.lower"())
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(f"{string}.lower"())
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:48:43)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(string.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 17:40:49)
-- CODE: 
texto = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(texto.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:43:57)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(string.upper)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
<built-in method upper of str object at 0x000001F56A0188B0>
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
<built-in method upper of str object at 0x00000245052188B0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:49:00)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 16:51:28)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:46:56)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(.lower"())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(.lower"())
                ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(.lower"())
                ^
SyntaxError: unterminated string literal (detected at line 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:48:07)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 17:40:41)
-- CODE: 
texto = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(texto.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 17:40:55)
-- CODE: 
texto = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(texto.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:47:21)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
.lower()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    .lower()
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    .lower()
    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:46:17)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(f"{string}.lower"())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
XXXX:2: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print(f"{string}.lower"())
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(f"{string}.lower"())
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
XXXX:2: SyntaxWarning: 'str' object is not callable; perhaps you missed a comma?
  print(f"{string}.lower"())
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(f"{string}.lower"())
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'str' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:46:57)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de LoveLace, nasceu em 1815, na Inglaterra."
print(.lower"())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(.lower"())
                ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(.lower"())
                ^
SyntaxError: unterminated string literal (detected at line 2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
